<resources>
    <string name="app_name">TpBuffet</string>
    <string name="nameLayaout1">Log_in</string>
    <string name="nameLayaout2">Registro</string>
    <string name="nameLayaout3">Menu</string>
    <string name="nameLayaout4">Pedido</string>
    <string name="Registro">Registro de Usuario</string>
    <string name="Bienvenido">Bienvenido a la primer aplicación</string>
    <string name="BuffetUTN">Buffet-UTN</string>
    <string name="mail">Mail: </string>
    <string name="mails"> mail </string>
    <string name="Clave">Clave: </string>
    <string name="Claves"> clave </string>
    <string name="Ingresar">Ingresar </string>
    <string name="o">O</string>
    <string name="Registrar">Registrarme </string>
    <string name="Recordarme">Recordarme</string>
    <string name="Estaes">Esta es la pantalla de registro.</string>
    <string name="PorFavor">Por favor ingrese datos verdaderos.</string>
    <string name="Nombre">Nombre: </string>
    <string name="Nombres">nombre</string>
    <string name="Apellido">Apellido: </string>
    <string name="Apellidos">apellido</string>
    <string name="DNI">DNI: </string>
    <string name="DNIS">dni</string>
    <string name="Reingrese">Reingrese: </string>
    <string name="Reingreses">reingrese clave</string>
    <string name="Pidiendo">Pidiendo...</string>
    <string name="Importe">Importe estimado:</string>
    <string name="Valor1">0,00</string>
    <string name="Elementos">Elementos \n seleccionados: </string>
    <string name="Elementos1">0</string>
    <string name="Enviar">Enviar pedido</string>
    <string name="Cafe">Cafè / Bebidas</string>
    <string name="Menu">Menu`s</string>
    <string name="Snaks">Snaks</string>
    <string name="porcion">Porciòn de Pizza</string>
    <string name="valor">15.50</string>
    <string name="munuPedido">Ver Pedido</string>
    <string name="menuSalir">Cerrar Sesion</string>
    <string name="Pedido">Mi Pedido</string>
    <string name="menuEnviar">Enviar Pedido Actual</string>
    <string name="menuLimpiar">Limpiar Pedido</string>
    <string name="Mensaje1">Complete los campos.</string>
    <string name="Mensaje2">Ingrese un Mail correcto.</string>
    <string name="Mensaje3">El usuario no existe.</string>
    <string name="Mensaje4">Las claves deben ser iguales.</string>
    <string name="Mensaje5">El usuario ya existe.</string>
    <string name="Mensaje6">Realice un pedido</string>
    <string name="MensajeFinal">El pedido fue enviado</string>
    <string name="MensajeTitulo1">Alerta!!</string>
    <string name="MensajeImporte">Importe Total: </string>
    <string name="MensajeCantidad">Cantidad de Elementos: </string>
    <string name="Mensaje7">Se produjo un error, vuelva a intentarlo</string>
</resources>
