<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Log_in.Log_in.Log_in"
    android:background="@drawable/fondo2"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registro"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:typeface="sans"
        android:textColor="@color/colorLetra"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido"
        android:gravity="center"
        android:textColor="@color/colorLetra"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BuffetUTN"
        android:gravity="center"
        android:textColor="@color/colorLetra"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textColor="@color/colorLetra"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:id="@+id/txtMail"
            android:textColor="@color/colorLetra"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clave"
            android:textColor="@color/colorLetra"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Clave"
            android:inputType="textPassword"
            android:id="@+id/txtClave"
            android:textColor="@color/colorLetra"
            />
    </LinearLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Ingresar"
    android:gravity="center"
    android:layout_gravity="center"
    android:id="@+id/btnIngresar"
    android:textColor="@color/colorLetra"
    android:background="@color/colorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/colorLetra"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registrar"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/btnRegistrarme"
        android:textColor="@color/colorLetra"
        android:background="@color/colorPrimary"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recordarme"
        android:checked="true"
        android:id="@+id/cbxRecordarme"
        android:textStyle="bold"
        android:textColor="@color/colorLetra"/>


</LinearLayout>


</RelativeLayout>
