<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registro"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:typeface="sans"
            android:textColor="@color/colorLetra"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estaes"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorLetra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PorFavor"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorLetra"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nombre"
                android:textColor="@color/colorLetra"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:id="@+id/txtNombre"
                android:textColor="@color/colorLetra"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Apellido"
                android:textColor="@color/colorLetra"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Apellido"
                android:id="@+id/txtApellido"
                android:textColor="@color/colorLetra"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DNI"
            android:textColor="@color/colorLetra"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/DNI"
            android:id="@+id/txtDni"
            android:inputType="number"
            android:textColor="@color/colorLetra"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorLetra"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:id="@+id/txtMail2"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorLetra"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clave"
            android:textColor="@color/colorLetra"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Clave"
            android:id="@+id/txtClave2"
            android:inputType="textPassword"
            android:textColor="@color/colorLetra"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reingrese"
            android:textColor="@color/colorLetra"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Reingrese"
            android:id="@+id/txtReingrese"
            android:inputType="textPassword"
            android:textColor="@color/colorLetra"
            />
    </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/btnRegistrarme2"
            android:textColor="@color/colorLetra"
            android:background="@color/colorPrimary"/>


    </LinearLayout>