<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pidiendo"
        android:gravity="left"
        android: android:padding="5dp"
        android:textColor="@color/colorLetra"
        android:background="@color/colorPrimary"
        android:textSize="30dp"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Importe"
        android:padding="5dp"
        android:textColor="@color/colorLetra"
        android:gravity="center"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtImporte"
        android:textColor="@color/colorLetra"
        android:gravity="right"
        android:layout_gravity="right"
        android:textStyle="bold"
        android:textSize="30dp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Enviar"
           android:padding="5dp"
           android:background="@color/colorPrimaryDark"
           android:textColor="@color/colorLetra"
           android:id="@+id/btnEnviarP"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Elementos"
            android:padding="5dp"
            android:textColor="@color/colorLetra"
            android:gravity="center"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtElemt"
            android:gravity="right"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:textSize="30dp"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>


</LinearLayout>
