<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pedido"
            android:gravity="left"
            android:padding="5dp"
            android:textColor="@color/colorLetra"
            android:background="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Importe"
            android:padding="5dp"
            android:textColor="@color/colorLetra"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtImportePedido"
            android:textColor="@color/colorLetra"
            android:gravity="right"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:textSize="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Elementos"
            android:padding="5dp"
            android:textColor="@color/colorLetra"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtElementoPedido"
            android:gravity="center"
            android:textColor="@color/colorLetra"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enviar"
            android:padding="15dp"
            android:layout_gravity="right"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorLetra"
            android:id="@+id/btnEnviarPedido"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/list2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>

</LinearLayout>